--- a/lab08/mutation_testing/pom.xml
+++ b/lab08/mutation_testing/pom.xml
@@ -24,6 +24,10 @@
         </dependency>
 
     </dependencies>
+    <properties>
+        <maven.compiler.source>18</maven.compiler.source>
+        <maven.compiler.target>18</maven.compiler.target>
+    </properties>
 
     <build>
         <sourceDirectory>src/main/java</sourceDirectory>
